--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-window": "^1.8.11",
     "yup": "^1.7.0"
   },
   "devDependencies": {
